--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,12 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/week1
 endorsed.classpath=
 excludes=
-file.reference.mysql-connector-j-9.2.0.zip=C:\\Users\\PC\\Documents\\mysql-connector-j-9.2.0.zip
+file.reference.mysql-connector-j-9.2.0.jar=C:\\Windows\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.2.0.zip}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
