--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\USER\\AppData\\Roaming\\NetBeans\\24\\build.properties
+user.properties.file=C:\\Users\\PC\\AppData\\Roaming\\NetBeans\\24\\build.properties
