--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,12 +35,16 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/week1
 endorsed.classpath=
 excludes=
+file.reference.jcalendar-1.4.jar=../../../lib/jcalendar-1.4.jar
+file.reference.jcalendar-1.4.zip=..\\..\\..\\jcalendar-1.4.zip
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Windows\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-j-9.2.0.jar}
+    ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.jcalendar-1.4.zip}:\
+    ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
