--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -46,7 +46,7 @@ javac.classpath=\
     ${file.reference.jcalendar-1.4.zip}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
-javac.compilerargs=\ --enable-preview
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
