--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,11 +38,13 @@ excludes=
 file.reference.jcalendar-1.4.jar=../../../lib/jcalendar-1.4.jar
 file.reference.jcalendar-1.4.zip=..\\..\\..\\jcalendar-1.4.zip
 file.reference.mysql-connector-j-9.2.0.jar=C:\\Windows\\mysql-connector-j-9.2.0.jar
+file.reference.mysql-connector-j-9.2.0.jar-1=C:\\mysql-connector-j-9.2.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${file.reference.mysql-connector-j-9.2.0.jar-1}:\
     ${file.reference.jcalendar-1.4.zip}:\
     ${file.reference.jcalendar-1.4.jar}
 # Space-separated list of extra javac options
